--- a/src/app/session/login/login.component.html
+++ b/src/app/session/login/login.component.html
@@ -1,23 +1,8 @@
-<div class="container">
-  <div class="content">
+<div id="container">
+  <div>
     <h1>Login</h1>
-    <form [formGroup]="loginForm">
-      <div class="field">
-        <label class="label">Email</label>
-        <div class="control">
-          <input class="input" type="email" formControlName="email">
-        </div>
-      </div>
-
-      <div class="field">
-        <label class="label">Password</label>
-        <div class="control">
-          <input class="input" type="password" formControlName="password">
-        </div>
-      </div>
-      <div class="control">
-        <button class="button is-primary" (click)="submit()">Submit</button>
-      </div>
-    </form>
+    <div>
+      <button (click)="login()">Acessar</button>
+    </div>
   </div>
 </div>
